@@ -1,9 +1,22 @@
+<%doc>
+   Template file to write the upstart file
+
+   Parameters:
+
+     cmd - String the command to run
+     limited - Boolean indicating if the respawn is limited to 5 times
+               within 40 seconds
+</%doc>
 <%args>
 $cmd
+$limited => 0
 </%args>
 pre-start script
     invoke-rc.d openvpn stop || true
 end script
 
 exec <% $cmd %>
+% if ($limited) {
+respawn limit 5 40
+% }
 respawn
