@@ -1,3 +1,5 @@
+HEAD
+	+ Set a respawn limit when the client is internal
 1.3.14
 	+ Remove migration scripts
 1.3.13
@@ -23,7 +25,7 @@
 	+ Bugfix: bundle configuration mode works again
 	+ Bugfix: windows bundle works again
 	+ DownloadClient bundle form is only showed when server
-	  configuration is complete	
+	  configuration is complete
 1.3.4
 	+ tableInfo returns an array of hash refs
 1.1.20
